# roudoutyu

./: .eslintrc.js  LICENSE  README.md  index.html  package.json  tsconfig.eslint.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
src/: App.css  App.tsx  style.css  timer.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs  settings.rs  version.rs
src/atoms/: language.ts
src/i18n/: description.ts  i18n.ts
src/i18n/locales/: en.ts  ja.ts
src/pages/: _app.tsx  index.tsx  settings.tsx
