[package]
name = "roudoutyu"
version = "0.4.0"
description = "A Tauri App"
authors = ["ChanTsune"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-notification = "2.2.2"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-process = "2.2.0"
tauri-plugin-http = "2.4.2"
tauri-plugin-fs = "2.2.1"
tauri-plugin-os = "2.2.1"
tauri-plugin-dialog = "2.2.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2.7.0"
